# flecs-wgpu-demo

./: .gitignore  Cargo.toml  README.md
examples/: example.rs  vello.rs
src/: application.rs  input.rs  lib.rs  render.rs  shape.rs  simple_text.rs  text.rs  window.rs
